Grammar/ParGrammar.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from ParGrammar.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram_internal -> Program                (0)
	Ident -> L_Ident                                   (1)
	Char -> L_charac                                   (2)
	Integer -> L_integ                                 (3)
	String -> L_quoted                                 (4)
	Program -> ListTopDef                              (5)
	TopDef -> RetVal Ident '(' ListArg ')' ';'         (6)
	TopDef -> 'list' Type Ident '=' '[' ListExpr ']' ';'   (7)
	TopDef -> RetVal Ident '(' ListArg ')' Block       (8)
	TopDef -> 'Glob' Type Ident '=' Expr ';'           (9)
	TopDef -> 'Gen' Type Ident '(' ListArg ')' Block   (10)
	ListTopDef ->                                      (11)
	ListTopDef -> TopDef ListTopDef                    (12)
	Arg -> Type Ident                                  (13)
	Arg -> 'list' Type Ident                           (14)
	ListArg ->                                         (15)
	ListArg -> Arg                                     (16)
	ListArg -> Arg ',' ListArg                         (17)
	Block -> '{' ListStmt '}'                          (18)
	ListStmt ->                                        (19)
	ListStmt -> Stmt ListStmt                          (20)
	Stmt -> ';'                                        (21)
	Stmt -> Block                                      (22)
	Stmt -> Type Ident '=' Expr ';'                    (23)
	Stmt -> Ident '=' Expr ';'                         (24)
	Stmt -> Ident '++' ';'                             (25)
	Stmt -> Ident '--' ';'                             (26)
	Stmt -> 'break' ';'                                (27)
	Stmt -> 'continue' ';'                             (28)
	Stmt -> 'if' '(' Expr ')' Block                    (29)
	Stmt -> 'if' '(' Expr ')' Block 'else' Block       (30)
	Stmt -> 'while' '(' Expr ')' Block                 (31)
	Stmt -> 'return' '(' Expr ')'                      (32)
	Stmt -> 'yield' '(' Expr ')'                       (33)
	Stmt -> 'gen' Ident '=' Ident '(' ListFunArg ')' ';'   (34)
	Stmt -> 'for' '(' Ident 'in' Ident '(' ListFunArg ')' ')' Block   (35)
	Stmt -> 'list' Type Ident '=' '[' ListExpr ']' ';'   (36)
	Stmt -> Ident '.push' '(' Expr ')' ';'             (37)
	Stmt -> Ident '.pop' ';'                           (38)
	Stmt -> Ident '.add' '(' Expr ').(' Expr ')' ';'   (39)
	Stmt -> Ident '.remove' '(' Expr ')' ';'           (40)
	Stmt -> Expr ';'                                   (41)
	Type -> 'int'                                      (42)
	Type -> 'char'                                     (43)
	Type -> 'string'                                   (44)
	Type -> 'bool'                                     (45)
	RetVal -> Type                                     (46)
	RetVal -> 'Proc'                                   (47)
	Var -> Ident                                       (48)
	Expr7 -> Ident '[' Expr ']'                        (49)
	Expr7 -> Var                                       (50)
	Expr7 -> ELit                                      (51)
	Expr7 -> Ident '.len'                              (52)
	Expr7 -> Ident '(' ListFunArg ')'                  (53)
	Expr7 -> '(' Expr ')'                              (54)
	ELit -> Integer                                    (55)
	ELit -> EBool                                      (56)
	ELit -> String                                     (57)
	ELit -> Char                                       (58)
	EBool -> 'true'                                    (59)
	EBool -> 'false'                                   (60)
	FunArg -> Expr                                     (61)
	FunArg -> '&' Var                                  (62)
	ListFunArg ->                                      (63)
	ListFunArg -> FunArg                               (64)
	ListFunArg -> FunArg ',' ListFunArg                (65)
	Expr6 -> '-' Expr7                                 (66)
	Expr6 -> '!' Expr7                                 (67)
	Expr6 -> '(' Type ')' Expr6                        (68)
	Expr6 -> 'next' '(' Ident ')'                      (69)
	Expr6 -> Expr7                                     (70)
	Expr5 -> Expr5 MulOp Expr6                         (71)
	Expr5 -> Expr6                                     (72)
	Expr4 -> Expr4 AddOp Expr5                         (73)
	Expr4 -> Expr5                                     (74)
	Expr3 -> Expr3 RelOp Expr4                         (75)
	Expr3 -> Expr4                                     (76)
	Expr2 -> Expr3 '&&' Expr2                          (77)
	Expr2 -> Expr3                                     (78)
	Expr1 -> Expr2 '||' Expr1                          (79)
	Expr1 -> Expr2                                     (80)
	Expr -> Expr1                                      (81)
	ListExpr ->                                        (82)
	ListExpr -> Expr                                   (83)
	ListExpr -> Expr ',' ListExpr                      (84)
	AddOp -> '+'                                       (85)
	AddOp -> '-'                                       (86)
	MulOp -> '*'                                       (87)
	MulOp -> '/'                                       (88)
	MulOp -> '%'                                       (89)
	RelOp -> '<'                                       (90)
	RelOp -> '<='                                      (91)
	RelOp -> '>'                                       (92)
	RelOp -> '>='                                      (93)
	RelOp -> '=='                                      (94)
	RelOp -> '!='                                      (95)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'('            { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	').('          { PT _ (TS _ 8) }
	'*'            { PT _ (TS _ 9) }
	'+'            { PT _ (TS _ 10) }
	'++'           { PT _ (TS _ 11) }
	','            { PT _ (TS _ 12) }
	'-'            { PT _ (TS _ 13) }
	'--'           { PT _ (TS _ 14) }
	'.add'         { PT _ (TS _ 15) }
	'.len'         { PT _ (TS _ 16) }
	'.pop'         { PT _ (TS _ 17) }
	'.push'        { PT _ (TS _ 18) }
	'.remove'      { PT _ (TS _ 19) }
	'/'            { PT _ (TS _ 20) }
	';'            { PT _ (TS _ 21) }
	'<'            { PT _ (TS _ 22) }
	'<='           { PT _ (TS _ 23) }
	'='            { PT _ (TS _ 24) }
	'=='           { PT _ (TS _ 25) }
	'>'            { PT _ (TS _ 26) }
	'>='           { PT _ (TS _ 27) }
	'Gen'          { PT _ (TS _ 28) }
	'Glob'         { PT _ (TS _ 29) }
	'Proc'         { PT _ (TS _ 30) }
	'['            { PT _ (TS _ 31) }
	']'            { PT _ (TS _ 32) }
	'bool'         { PT _ (TS _ 33) }
	'break'        { PT _ (TS _ 34) }
	'char'         { PT _ (TS _ 35) }
	'continue'     { PT _ (TS _ 36) }
	'else'         { PT _ (TS _ 37) }
	'false'        { PT _ (TS _ 38) }
	'for'          { PT _ (TS _ 39) }
	'gen'          { PT _ (TS _ 40) }
	'if'           { PT _ (TS _ 41) }
	'in'           { PT _ (TS _ 42) }
	'int'          { PT _ (TS _ 43) }
	'list'         { PT _ (TS _ 44) }
	'next'         { PT _ (TS _ 45) }
	'return'       { PT _ (TS _ 46) }
	'string'       { PT _ (TS _ 47) }
	'true'         { PT _ (TS _ 48) }
	'while'        { PT _ (TS _ 49) }
	'yield'        { PT _ (TS _ 50) }
	'{'            { PT _ (TS _ 51) }
	'||'           { PT _ (TS _ 52) }
	'}'            { PT _ (TS _ 53) }
	L_Ident        { PT _ (TV _) }
	L_charac       { PT _ (TC _) }
	L_integ        { PT _ (TI _) }
	L_quoted       { PT _ (TL _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram_internal rule  0
	Ident           rule  1
	Char            rule  2
	Integer         rule  3
	String          rule  4
	Program         rule  5
	TopDef          rules 6, 7, 8, 9, 10
	ListTopDef      rules 11, 12
	Arg             rules 13, 14
	ListArg         rules 15, 16, 17
	Block           rule  18
	ListStmt        rules 19, 20
	Stmt            rules 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41
	Type            rules 42, 43, 44, 45
	RetVal          rules 46, 47
	Var             rule  48
	Expr7           rules 49, 50, 51, 52, 53, 54
	ELit            rules 55, 56, 57, 58
	EBool           rules 59, 60
	FunArg          rules 61, 62
	ListFunArg      rules 63, 64, 65
	Expr6           rules 66, 67, 68, 69, 70
	Expr5           rules 71, 72
	Expr4           rules 73, 74
	Expr3           rules 75, 76
	Expr2           rules 77, 78
	Expr1           rules 79, 80
	Expr            rule  81
	ListExpr        rules 82, 83, 84
	AddOp           rules 85, 86
	MulOp           rules 87, 88, 89
	RelOp           rules 90, 91, 92, 93, 94, 95

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'Gen'          shift, and enter state 8
	'Glob'         shift, and enter state 9
	'Proc'         shift, and enter state 10
	'bool'         shift, and enter state 11
	'char'         shift, and enter state 12
	'int'          shift, and enter state 13
	'list'         shift, and enter state 14
	'string'       shift, and enter state 15
	%eof           reduce using rule 11

	Program        goto state 3
	TopDef         goto state 4
	ListTopDef     goto state 5
	Type           goto state 6
	RetVal         goto state 7

State 1


	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	').('          reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'.add'         reduce using rule 1
	'.len'         reduce using rule 1
	'.pop'         reduce using rule 1
	'.push'        reduce using rule 1
	'.remove'      reduce using rule 1
	'/'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'['            reduce using rule 1
	']'            reduce using rule 1
	'in'           reduce using rule 1
	'||'           reduce using rule 1


State 3

	%start_pProgram_internal -> Program .               (rule 0)

	%eof           accept


State 4

	ListTopDef -> TopDef . ListTopDef                   (rule 12)

	'Gen'          shift, and enter state 8
	'Glob'         shift, and enter state 9
	'Proc'         shift, and enter state 10
	'bool'         shift, and enter state 11
	'char'         shift, and enter state 12
	'int'          shift, and enter state 13
	'list'         shift, and enter state 14
	'string'       shift, and enter state 15
	%eof           reduce using rule 11

	TopDef         goto state 4
	ListTopDef     goto state 20
	Type           goto state 6
	RetVal         goto state 7

State 5

	Program -> ListTopDef .                             (rule 5)

	%eof           reduce using rule 5


State 6

	RetVal -> Type .                                    (rule 46)

	L_Ident        reduce using rule 46


State 7

	TopDef -> RetVal . Ident '(' ListArg ')' ';'        (rule 6)
	TopDef -> RetVal . Ident '(' ListArg ')' Block      (rule 8)

	L_Ident        shift, and enter state 2

	Ident          goto state 19

State 8

	TopDef -> 'Gen' . Type Ident '(' ListArg ')' Block    (rule 10)

	'bool'         shift, and enter state 11
	'char'         shift, and enter state 12
	'int'          shift, and enter state 13
	'string'       shift, and enter state 15

	Type           goto state 18

State 9

	TopDef -> 'Glob' . Type Ident '=' Expr ';'          (rule 9)

	'bool'         shift, and enter state 11
	'char'         shift, and enter state 12
	'int'          shift, and enter state 13
	'string'       shift, and enter state 15

	Type           goto state 17

State 10

	RetVal -> 'Proc' .                                  (rule 47)

	L_Ident        reduce using rule 47


State 11

	Type -> 'bool' .                                    (rule 45)

	')'            reduce using rule 45
	L_Ident        reduce using rule 45


State 12

	Type -> 'char' .                                    (rule 43)

	')'            reduce using rule 43
	L_Ident        reduce using rule 43


State 13

	Type -> 'int' .                                     (rule 42)

	')'            reduce using rule 42
	L_Ident        reduce using rule 42


State 14

	TopDef -> 'list' . Type Ident '=' '[' ListExpr ']' ';'    (rule 7)

	'bool'         shift, and enter state 11
	'char'         shift, and enter state 12
	'int'          shift, and enter state 13
	'string'       shift, and enter state 15

	Type           goto state 16

State 15

	Type -> 'string' .                                  (rule 44)

	')'            reduce using rule 44
	L_Ident        reduce using rule 44


State 16

	TopDef -> 'list' Type . Ident '=' '[' ListExpr ']' ';'    (rule 7)

	L_Ident        shift, and enter state 2

	Ident          goto state 24

State 17

	TopDef -> 'Glob' Type . Ident '=' Expr ';'          (rule 9)

	L_Ident        shift, and enter state 2

	Ident          goto state 23

State 18

	TopDef -> 'Gen' Type . Ident '(' ListArg ')' Block    (rule 10)

	L_Ident        shift, and enter state 2

	Ident          goto state 22

State 19

	TopDef -> RetVal Ident . '(' ListArg ')' ';'        (rule 6)
	TopDef -> RetVal Ident . '(' ListArg ')' Block      (rule 8)

	'('            shift, and enter state 21


State 20

	ListTopDef -> TopDef ListTopDef .                   (rule 12)

	%eof           reduce using rule 12


State 21

	TopDef -> RetVal Ident '(' . ListArg ')' ';'        (rule 6)
	TopDef -> RetVal Ident '(' . ListArg ')' Block      (rule 8)

	')'            reduce using rule 15
	'bool'         shift, and enter state 11
	'char'         shift, and enter state 12
	'int'          shift, and enter state 13
	'list'         shift, and enter state 31
	'string'       shift, and enter state 15

	Arg            goto state 28
	ListArg        goto state 29
	Type           goto state 30

State 22

	TopDef -> 'Gen' Type Ident . '(' ListArg ')' Block    (rule 10)

	'('            shift, and enter state 27


State 23

	TopDef -> 'Glob' Type Ident . '=' Expr ';'          (rule 9)

	'='            shift, and enter state 26


State 24

	TopDef -> 'list' Type Ident . '=' '[' ListExpr ']' ';'    (rule 7)

	'='            shift, and enter state 25


State 25

	TopDef -> 'list' Type Ident '=' . '[' ListExpr ']' ';'    (rule 7)

	'['            shift, and enter state 61


State 26

	TopDef -> 'Glob' Type Ident '=' . Expr ';'          (rule 9)

	'!'            shift, and enter state 52
	'('            shift, and enter state 53
	'-'            shift, and enter state 54
	'false'        shift, and enter state 55
	'next'         shift, and enter state 56
	'true'         shift, and enter state 57
	L_Ident        shift, and enter state 2
	L_charac       shift, and enter state 58
	L_integ        shift, and enter state 59
	L_quoted       shift, and enter state 60

	Ident          goto state 37
	Char           goto state 38
	Integer        goto state 39
	String         goto state 40
	Var            goto state 41
	Expr7          goto state 42
	ELit           goto state 43
	EBool          goto state 44
	Expr6          goto state 45
	Expr5          goto state 46
	Expr4          goto state 47
	Expr3          goto state 48
	Expr2          goto state 49
	Expr1          goto state 50
	Expr           goto state 51

State 27

	TopDef -> 'Gen' Type Ident '(' . ListArg ')' Block    (rule 10)

	')'            reduce using rule 15
	'bool'         shift, and enter state 11
	'char'         shift, and enter state 12
	'int'          shift, and enter state 13
	'list'         shift, and enter state 31
	'string'       shift, and enter state 15

	Arg            goto state 28
	ListArg        goto state 36
	Type           goto state 30

State 28

	ListArg -> Arg .                                    (rule 16)
	ListArg -> Arg . ',' ListArg                        (rule 17)

	')'            reduce using rule 16
	','            shift, and enter state 35


State 29

	TopDef -> RetVal Ident '(' ListArg . ')' ';'        (rule 6)
	TopDef -> RetVal Ident '(' ListArg . ')' Block      (rule 8)

	')'            shift, and enter state 34


State 30

	Arg -> Type . Ident                                 (rule 13)

	L_Ident        shift, and enter state 2

	Ident          goto state 33

State 31

	Arg -> 'list' . Type Ident                          (rule 14)

	'bool'         shift, and enter state 11
	'char'         shift, and enter state 12
	'int'          shift, and enter state 13
	'string'       shift, and enter state 15

	Type           goto state 32

State 32

	Arg -> 'list' Type . Ident                          (rule 14)

	L_Ident        shift, and enter state 2

	Ident          goto state 95

State 33

	Arg -> Type Ident .                                 (rule 13)

	')'            reduce using rule 13
	','            reduce using rule 13


State 34

	TopDef -> RetVal Ident '(' ListArg ')' . ';'        (rule 6)
	TopDef -> RetVal Ident '(' ListArg ')' . Block      (rule 8)

	';'            shift, and enter state 93
	'{'            shift, and enter state 94

	Block          goto state 92

State 35

	ListArg -> Arg ',' . ListArg                        (rule 17)

	')'            reduce using rule 15
	'bool'         shift, and enter state 11
	'char'         shift, and enter state 12
	'int'          shift, and enter state 13
	'list'         shift, and enter state 31
	'string'       shift, and enter state 15

	Arg            goto state 28
	ListArg        goto state 91
	Type           goto state 30

State 36

	TopDef -> 'Gen' Type Ident '(' ListArg . ')' Block    (rule 10)

	')'            shift, and enter state 90


State 37

	Var -> Ident .                                      (rule 48)
	Expr7 -> Ident . '[' Expr ']'                       (rule 49)
	Expr7 -> Ident . '.len'                             (rule 52)
	Expr7 -> Ident . '(' ListFunArg ')'                 (rule 53)
